Minor performance improvement